services/networking/keycloak.gateway.yml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: keycloak-gateway
  namespace: keycloak
spec:
  selector:
    app: istio-ingressgateway
  servers:
  - hosts:
    - keycloak.kamuridesu.com
    port:
      name: http
      number: 80
      protocol: HTTP
