services/networking/trilium.gateway.yml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: trilium-gateway
  namespace: trilium
spec:
  selector:
    app: istio-ingressgateway
  servers:
  - hosts:
    - notes.kamuridesu.com
    port:
      name: http
      number: 80
      protocol: HTTP
