services/networking/api.virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: api-virtualservice
  namespace: api-default
spec:
  gateways:
    - api-default/api-gateway
  hosts:
    - api.kamuridesu.com
  http:
    - match:
        - uri:
            prefix: /api/ocr
      route:
        - destination:
            host: ocr-exposer-service.api-default.svc.cluster.local
            port:
              number: 2222
          weight: 100
