services/networking/argocd.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-ingress
  namespace: argocd
spec:
  rules:
  - host: argocd.kamuridesu.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: argo-cd-argocd-server
            port: 
              number: 443
