services/networking/count.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: count-ingress
  namespace: count
spec:
  ingressClassName: haproxy
  rules:
  - host: count.kamuridesu.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: moe-count-service
            port: 
              number: 8080
