services/networking/count.virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: count-virtualservice
  namespace: count
spec:
  gateways:
    - count/count-gateway
  hosts:
    - count.kamuridesu.com
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: >-
              count-service.count.svc.cluster.local
            port:
              number: 8080
          weight: 100
