services/networking/invidious.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: invidious-ingress
  namespace: invidious
spec:
  ingressClassName: haproxy
  rules:
  - host: inv.kamuridesu.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: invidious-service
            port: 
              number: 3000
