services/networking/keycloak.virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: keycloak-virtualservice
  namespace: keycloak
spec:
  gateways:
    - keycloak/keycloak-gateway
  hosts:
    - keycloak.kamuridesu.com
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: >-
              keycloak-service.keycloak.svc.cluster.local
            port:
              number: 8080
          weight: 100
