services/networking/proxy.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: 3proxy-ingress
  namespace: proxy
spec:
  ingressClassName: haproxy
  rules:
    - http:
        paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: proxy-service
              port: 
                number: 1080
