services/networking/trilium.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: trilium-ingress
  namespace: trilium
spec:
  rules:
  - host: notes.kamuridesu.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: trilium-service
            port: 
              number: 8080
