services/networking/trilium.virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: trilium-virtualservice
  namespace: trilium
spec:
  gateways:
    - trilium/trilium-gateway
  hosts:
    - notes.kamuridesu.com
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: >-
              trilium-service.trilium.svc.cluster.local
            port:
              number: 8080
          weight: 100
